[metadata]
name = eventcrawler
author = Dario Bertini
author-email = berdario@gmail.com
description-file = README.md
license = MIT
classifier =
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
[files]
packages =
    eventcrawler
data_files =
[entry_points]
console_scripts =
    eventcrawler = eventcrawler:main
